--- a/configure.in
+++ b/configure.in
@@ -162,6 +162,7 @@ if test "x$enable_debug" = "xyes"; then
 fi
 
 # Checks for programs.
+AC_PROG_CXX
 AC_LANG_CPLUSPLUS
 AC_PROG_CC
 AM_PROG_CC_C_O
